--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 # Works with all MoveIt! repositories/branches
 # Author: Dave Coleman, Jonathan Bohren
 sudo: true
+cache: apt
 language:
   - cpp
 compiler:
