--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ before_install: # Use this to prepare the system to install prerequisites or dep
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
   - sudo apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
   - sudo apt-get update -qq
-  - sudo apt-get install ros-$ROS_DISTRO-ros-base
+  - sudo apt-get install ros-jade-desktop-full
   - cd /src
   - catkin_init_workspace
+  - cd ..
 install: # Use this to install any prerequisites or dependencies necessary to run your bui
   # Install dependencies for source repos
   #- rosdep install --from-paths src --ignore-src --rosdistro $ROS_DISTRO -y
