--- a/src/beginner_tutorials/CMakeLists.txt
+++ b/src/beginner_tutorials/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(beginner_tutorials)
 
 ## Find catkin and any catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs cv_bridge)
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs cv_bridge)
 find_package(OpenCV REQUIRED)
 
 
@@ -25,4 +25,5 @@ add_dependencies(talker beginner_tutorials_generate_messages_cpp)
 
 add_executable(listener src/listener.cpp)
 target_link_libraries(listener ${catkin_LIBRARIES})
+target_link_libraries(listener ${OpenCV_LIBRARIES})
 add_dependencies(listener beginner_tutorials_generate_messages_cpp)
