--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ before_install: # Use this to prepare the system to install prerequisites or dep
   - export REPOSITORY_NAME=${PWD##*/}
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
   - sudo apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-key 0xB01FA116
-  - sudo apt-get update
-  - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin ros-$ROS_DISTRO-ros
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin ros-$ROS_DISTRO-ros
   #Install Your Dependencies
-  - sudo apt-get install ros-$ROS_DISTRO-opencv3 ros-$ROS_DISTRO-cv-bridge
+  - sudo apt-get -qq install ros-$ROS_DISTRO-opencv3 ros-$ROS_DISTRO-cv-bridge
   # Setup rosdep
   - sudo rosdep init
   - rosdep update
