--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,7 @@ before_install: # Use this to prepare the system to install prerequisites or dep
 install: # Use this to install any prerequisites or dependencies necessary to run your bui
   # Install dependencies for source repos
   - rosdep install --from-paths src --ignore-src --rosdistro $ROS_DISTRO -y
-  - export PYTHONPATH=/usr/share/pyshared:/usr/lib/pymodules/python2.7:${PYTHONPATH}
-  - echo $PYTHONPATH
-  - ls $PYTHONPATH
+  - export PYTHONPATH=/usr/share/pyshared:/usr/lib/pymodules/python2.7:/opt/ros/$ROS_DISTRO/lib/python2.7/dist-packages:${PYTHONPATH}
 before_script: # Use this to prepare your build for testing e.g. copy database configurations, environment variables, etc.
   - source /opt/ros/$ROS_DISTRO/setup.bash 
   - printenv | grep ROS 
