--- a/src/webcam/CMakeLists.txt
+++ b/src/webcam/CMakeLists.txt
@@ -116,9 +116,9 @@ catkin_package(
 # include_directories(include)
 include_directories(include ${catkin_INCLUDE_DIRS} ${OpenCV_LIBRARIES})
 
-add_executable(listener src/listener.cpp src/squarefinder.cpp src/squarefinder.h)
-target_link_libraries(listener ${catkin_LIBRARIES})
-target_link_libraries(listener ${OpenCV_LIBRARIES})
+add_executable(webcam src/webcam_processor.cpp src/squarefinder.cpp src/squarefinder.h)
+target_link_libraries(webcam ${catkin_LIBRARIES})
+target_link_libraries(webcam ${OpenCV_LIBRARIES})
 
 ## Declare a C++ library
 # add_library(webcam
