Lots of new stuff

--- a/src/supervisor/CMakeLists.txt
+++ b/src/supervisor/CMakeLists.txt
@@ -10,16 +10,16 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(
         FILES
-        StatusMessage.msg
+        ErrorMessage.msg
 )
-add_service_files(FILES Gripper.srv Wheel.srv LayDown.srv PickUp.srv)
+add_service_files(FILES MoveGripper.srv Wheel.srv LayDown.srv PickUp.srv)
 
 generate_messages(
         DEPENDENCIES
         std_msgs  # Or other packages containing msgs
 )
 
-add_executable(supervisor src/Supervisor.cpp src/ImageReader.cpp src/Tile.cpp src/JoyStick.h)
+add_executable(supervisor src/Supervisor.cpp src/ImageReader.cpp src/JoyStick.h)
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
